--- a/frontend-client/src/App.css
+++ b/frontend-client/src/App.css
@@ -24,3 +24,32 @@
   color: white;
 }
 
+form {
+  display: flex;
+  flex-direction: column;
+  width: 400px;
+  min-width: 100px;
+  min-height: 350px;
+  padding: 40px 40px 40px 40px;
+  border-radius: 6px;
+  box-shadow: 0px 4px 20px #222;
+  background-color: #fefefe;
+  justify-content: center;
+  margin: 0 auto;
+}
+
+label {
+  margin-top: 20px;
+}
+
+input{
+  flex-direction: column;
+  padding: 10px 10px;
+  border-radius: 5px;
+  border: 1px solid #d6d1d5;
+  width: 25%;
+}
+
+.submitButton{
+  margin: 0 auto;
+}
