--- a/frontend-client/src/App.css
+++ b/frontend-client/src/App.css
@@ -29,7 +29,6 @@ form {
   flex-direction: column;
   width: 500px;
   min-width: 100px;
-  min-height: 400px;
   padding: 40px 40px 40px 40px;
   border-radius: 6px;
   box-shadow: 0px 4px 20px #222;
@@ -89,4 +88,17 @@ select{
   height: 100%;
   width: 30%;
   margin-right: 30px;
+}
+
+.offerSearchForm {
+  display: flex;
+  border-radius: 6px;
+  box-shadow: 0px 4px 20px #222;
+  background-color: #fefefe;
+  width: 100%;
+  height: 210px;
+}
+
+.submitButtonOffer {
+  width: 150px
 }
