Added destinations page, reservation and offer details

--- a/frontend-client/src/App.css
+++ b/frontend-client/src/App.css
@@ -113,6 +113,14 @@ select{
 }
 
 .logout {
+  margin-top: 250px;
+}
+
+.loginForm {
   margin-top: 200px;
-  margin-left: 400px;
+}
+
+.alreadyLogged{
+  margin-top: 200px;
+  margin-left: 350px
 }
